<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:id="@+id/male_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:focusable="true"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/male_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="3dp"
                    android:src="@drawable/male" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/male"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/female_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="3dp"
                    android:src="@drawable/female" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/female"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/sex"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:id="@+id/height_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/height_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0cm"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="28dp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:max="220"
                android:min="130" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view_height"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/weight_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/weight"
                    android:textAlignment="center"
                    android:textColor="@color/text_color" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/weight_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="50"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp">


                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btn_decreed_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/circle_button"
                        android:padding="10dp"
                        android:src="@drawable/ic_add_white_24dp" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btn_plus_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/circle_button"
                        android:padding="10dp"
                        android:src="@drawable/ic_add_white_24dp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/age_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/age"
                    android:textAlignment="center"
                    android:textColor="@color/text_color" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/age_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp">


                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btn_decreed_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/circle_button"
                        android:padding="10dp"
                        android:src="@drawable/ic_add_white_24dp" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btn_plus_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/circle_button"
                        android:padding="10dp"
                        android:src="@drawable/ic_add_white_24dp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/red_button"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="CALCULATE"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>